// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "format" option with true value 1`] = `
"Invalid options object. Image Resize Loader has been initialized using an options object that does not match the API schema.
 - options.format should be one of these:
   \\"jpeg\\" | \\"png\\" | \\"webp\\" | \\"tiff\\"
   -> The format of the output file. When unspecified, outputs the same format as the imported file."
`;

exports[`validate options should throw an error on the "quality" option with 0 value 1`] = `
"Invalid options object. Image Resize Loader has been initialized using an options object that does not match the API schema.
 - options.quality should be >= 1.
   -> The quality of the output image. Default to 80 for JPEG, WebP, and TIFF, default to 100 for PNG."
`;

exports[`validate options should throw an error on the "scaleUp" option with 0 value 1`] = `
"Invalid options object. Image Resize Loader has been initialized using an options object that does not match the API schema.
 - options.scaleUp should be a boolean.
   -> Whether or not to scale up the image when the desired size is larger than the image size. Default to false."
`;

exports[`validate options should throw an error on the "sharpOptions" option with 0 value 1`] = `
"Invalid options object. Image Resize Loader has been initialized using an options object that does not match the API schema.
 - options.sharpOptions should be an object:
   object { resize?, png?, jpeg?, webp?, tiff?, … }"
`;

exports[`validate options should throw an error on the "size" option with true value 1`] = `
"Invalid options object. Image Resize Loader has been initialized using an options object that does not match the API schema.
 - options.size should be an object:
   object { width?, height?, fit?, position?, background?, … }
   -> The size of the output image. This field is required."
`;

exports[`validate options should throw an error on the "size" option with undefined value 1`] = `
"Invalid options object. Image Resize Loader has been initialized using an options object that does not match the API schema.
 - options misses the property 'size'. Should be:
   object { width?, height?, fit?, position?, background?, … }
   -> The size of the output image. This field is required."
`;
